# ScheduleAi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  analysis_visualization.py  example.py  hybrid_timetable.py  pyproject.toml  requirements.txt  timetable.xlsx
hybrid_timetable/: __init__.py  room_assignment.py  timetable_generator.py
hybrid_timetable/ga_module/: fitness.py  ga_setup.py
hybrid_timetable/ortools_solver/: solver.py
hybrid_timetable/utils/: clashes.py  excel_export.py  helpers.py
